<resources>
    <string name="app_name">PasswordGenerator</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_generate">Generate</string>
    <string name="switch_include_numbers">Numbers</string>
    <string name="switch_include_lowercase_letters">Lowercase letters</string>
    <string name="switch_include_uppercase_letters">Uppercase letters</string>
    <string name="switch_include_special_characters">Special characters</string>
    <string name="password">Password</string>
    <string name="copyPassword">Copied the password to clipboard.</string>
    <string name="save">Save</string>
    <string name="special_characters">Special Characters</string>
    <string name="copies_the_password">Copies the password</string>
</resources>