<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generate_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_generate" />

            <GridLayout
                android:id="@+id/grid_number_of_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <SeekBar
                    android:id="@+id/number_of_characters"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:max="60"
                    android:progress="6" />

                <TextView
                    android:id="@+id/label_number_of_characters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="10"
                    app:layout_constraintStart_toEndOf="@+id/number_of_characters" />
            </GridLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/include_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/switch_include_numbers" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/include_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/switch_include_lowercase_letters" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/include_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/switch_include_uppercase_letters" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/include_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_include_special_characters" />
        </LinearLayout>
    </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/copy_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/copies_the_password"
            android:src="@drawable/ic_content_copy_24px"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>